[package]
name = "weldr"
version = "0.1.0"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]

[dependencies]

log = "0.3"
env_logger = "0.3.1"
futures = "0.1.11"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-timer = "0.1.0"

rustc-serialize = "0.3.19"

[dev-dependencies]
reqwest = "0.2.0"

[[bin]]
name = "weldr"
path = "src/weldr.rs"

[[bin]]
name = "test-server"
path = "src/test-server.rs"
