[package]
name = "weldr"
version = "0.1.0"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]

build = "build.rs"

[dependencies]
log = "0.3"
env_logger = "0.3.1"
futures = "0.1.11"
hyper = "0.11.0"
hyper-tls = "0.1.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1.0"
tokio-timer = "0.1.0"
libc = "0.2.21"
nix = "0.8.1"
clap = "2.23.2"
capnp = "0.8.10"
capnp-rpc = "0.8.2"
net2 = "0.2.27"
serde = "1.0.7"
serde_json = "1.0.2"
serde_derive = "1.0.7"

[build-dependencies]
capnpc = "0.8"

[[bin]]
name = "weldr"
path = "src/weldr.rs"

[[bin]]
name = "test-server"
path = "src/test-server.rs"
